[Explore sites]: Ensure that we have full rows of sites for each category at the start.

We limit the maximum number of rows shown by how many sites each category had to begin with (before any blacklisting occurs).

Bug: 911362
Change-Id: I35ac39870422248ae830050bb6ccf4f405960f4d
Reviewed-on: https://chromium-review.googlesource.com/c/1359694
Commit-Queue: Cathy Li <chili@chromium.org>
Reviewed-by: Justin DeWitt <dewittj@chromium.org>
Reviewed-by: Peter Williamson <petewil@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615455}
Former-commit-id: b07599ca0f2ba045a41c06e4b66d12a573817cb2