chrome/android/junit/src/org/chromium/chrome/browser/explore_sites/ExploreSitesCategoryUnitTest.java
@@ -6,6 +6,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 package org.chromium.chrome.browser.explore_sites;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
 
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -20,7 +22,6 @@ public class ExploreSitesCategoryUnitTest {
     @Test
     public void testAddSite() {
         final int id = 1;
-        final int tileIndex = 3;
         @ExploreSitesCategory.CategoryType
         final int type = ExploreSitesCategory.CategoryType.SCIENCE;
         final int siteId = 100;
@@ -29,15 +30,17 @@ public class ExploreSitesCategoryUnitTest {
         final String categoryTitle = "Movies";
 
         ExploreSitesCategory category = new ExploreSitesCategory(id, type, categoryTitle);
-        category.addSite(new ExploreSitesSite(siteId, tileIndex, title, url));
+        category.addSite(new ExploreSitesSite(siteId, title, url, true)); // blacklisted
+        category.addSite(new ExploreSitesSite(siteId, title, url, false)); // not blacklisted
 
         assertEquals(id, category.getId());
         assertEquals(type, category.getType());
-        assertEquals(1, category.getSites().size());
+        assertEquals(2, category.getSites().size());
+        assertEquals(1, category.getNumDisplayed());
         assertEquals(siteId, category.getSites().get(0).getModel().get(ExploreSitesSite.ID_KEY));
-        assertEquals(tileIndex,
-                category.getSites().get(0).getModel().get(ExploreSitesSite.TILE_INDEX_KEY));
         assertEquals(title, category.getSites().get(0).getModel().get(ExploreSitesSite.TITLE_KEY));
         assertEquals(url, category.getSites().get(0).getModel().get(ExploreSitesSite.URL_KEY));
+        assertTrue(category.getSites().get(0).getModel().get(ExploreSitesSite.BLACKLISTED_KEY));
+        assertFalse(category.getSites().get(1).getModel().get(ExploreSitesSite.BLACKLISTED_KEY));
     }
 }
